[package]
name = "bitflyer-client"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9"
websocket = "0.23"
ctrlc = "3.1"
rusqlite = "0.20"
ws = { version = "0.9", features = ["ssl"] }
